force-app/main/default/objects/Inventory_Setting__mdt/Inventory_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Inventory Setting</label>
</CustomObject>