force-app/main/default/objects/Inventory_Setting__mdt/fields/Land__c.field-meta.xml
<CustomField>
    <fullName>Land__c</fullName>
    <label>Land</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Land1</fullName>
                <default>true</default>
                <label>The Land1</label>
            </value>
            <value>
                <fullName>The Land2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>