force-app/main/default/objects/Inventory_Setting__mdt/fields/recordTypeDN__c.field-meta.xml
<CustomField>
    <fullName>recordTypeDN__c</fullName>
    <label>recordTypeDN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>