force-app/main/default/objects/Inventory_Setting__mdt/fields/testA__c.field-meta.xml
<CustomField>
    <fullName>testA__c</fullName>
    <label>testA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test A1</fullName>
                <default>true</default>
                <label>Test A1</label>
            </value>
            <value>
                <fullName>test A2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>